--- a/academie_franco/.env
+++ b/academie_franco/.env
@@ -1,4 +1,2 @@
-GOOGLE_CLIENT_ID ="165315061371-6q85p06tpqdnak762n1h94lgvhrs217t.apps.googleusercontent.com"
-GOOGLE_CLIENT_SECRET="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"
 MONGO_PASSWORD="Rwanda@123456"
-SECRET_KEY="academie"
+SECRETee_KEYee="academie"
