--- a/academie_franco/.env
+++ b/academie_franco/.env
@@ -1,2 +1,4 @@
+GOOGLE_CLIENT_ID ="165315061371-6q85p06tpqdnak762n1h94lgvhrs217t.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
 MONGO_PASSWORD="Rwanda@123456"
-SECRETee_KEYee="academie"
+SECRET_KEY="academie"
